# agda2lambox

./: .ghci  .gitignore  CheckWF.v  HACKING.md  LICENSE  Makefile  NOTES.md  Playground.v  README.md  _CoqProject  agda2lambox.agda-lib  agda2lambox.cabal  agda2min.cabal  cabal.project  flake.nix
.github/workflows/: ci.yml  nix-ci.yml
demo/: index.html
src/: .#LambdaBox.hs  Agda.hs  Agda2Lambox.hs  CoqGen.hs  LambdaBox.hs  Lambox2Coq.hs  Main.hs  SExpr.hs  Utils.hs
src/Agda/: Lib.hs  Utils.hs
src/Agda/Utils/: EliminateDefaults.hs  EtaExpandConstructors.hs  Treeless.hs
src/Agda2Lambox/: Compile.hs  Convert.hs  Monad.hs
src/Agda2Lambox/Compile/: Data.hs  Function.hs  Inductive.hs  Monad.hs  Record.hs  Target.hs  Term.hs  Type.hs  TypeScheme.hs  Utils.hs
src/Agda2Lambox/Convert/: Class.hs  Data.hs  Function.hs  Record.hs  Term.hs  Terms.hs  Type.hs  Types.hs
src/LambdaBox/: Env.hs  Names.hs  Term.hs  Type.hs
test/: BigDemo.agda  Demo.agda  EtaCon.agda  Hello.agda  Imports.agda  Irr.agda  Map.agda  Nat.agda  OddEven.agda  Proj.agda  STLC.agda  Test.agda
theories/: CheckWF.v  Eval.v
