cabal-version:       2.2
name:                agda2lambox
version:             1.1
author:              Orestis Melkonian, Carlos Tomé Cortiñas, Bohdan Liesnikov
category:            Language, Compiler
build-type:          Simple
synopsis:            Compiling Agda code to λ-box.

extra-doc-files:    README.md

source-repository head
  type:     git
  location: https://github.com/omelkonian/agda2lambox.git

executable agda2lambox
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Agda.Utils,
                       Agda.Utils.Treeless,
                       Agda.Utils.EliminateDefaults,
                       Agda2Lambox.Compile.Target,
                       Agda2Lambox.Compile.Utils,
                       Agda2Lambox.Compile.Monad,
                       Agda2Lambox.Compile.Term,
                       Agda2Lambox.Compile.Function,
                       Agda2Lambox.Compile.Inductive,
                       Agda2Lambox.Compile.Type,
                       Agda2Lambox.Compile,
                       LambdaBox.Names,
                       LambdaBox.Term,
                       LambdaBox.Type,
                       LambdaBox.Env,
                       LambdaBox,
                       CoqGen,
                       Paths_agda2lambox
  autogen-modules:     Paths_agda2lambox
  build-depends:       base       >= 4.10  && < 4.22,
                       Agda       >= 2.8   && < 2.9,
                       deepseq    >= 1.4.4 && < 1.6,
                       queues     >= 1.0.0 && < 1.2,
                       pretty-show,
                       containers,
                       directory,
                       filepath,
                       text,
                       mtl
  default-language:    Haskell2010
  default-extensions:
    LambdaCase RecordWildCards PatternSynonyms TupleSections
    ViewPatterns PatternGuards
    ScopedTypeVariables
    TypeFamilies TypeOperators TypeApplications
    FunctionalDependencies TypeSynonymInstances ConstraintKinds
    DoAndIfThenElse BlockArguments MultiWayIf
    ImportQualifiedPost
