cabal-version:       2.2
name:                agda2lambox
version:             1.1
author:              Orestis Melkonian, Carlos Tomé Cortiñas, Bohdan Liesnikov
category:            Language, Compiler
build-type:          Simple
synopsis:            Compiling Agda code to λ-box.
license:             MIT
license-file:        LICENSE

extra-doc-files:    README.md

source-repository head
  type:     git
  location: https://github.com/omelkonian/agda2lambox.git

executable agda2lambox
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Agda.Utils,
                       Agda.Utils.EliminateDefaults,
                       Agda.Utils.EtaExpandConstructors,
                       Agda.Utils.Simplify,
                       Agda.Utils.Treeless,
                       Agda2Lambox.Compile.Target,
                       Agda2Lambox.Compile.Utils,
                       Agda2Lambox.Compile.Monad,
                       Agda2Lambox.Compile.Term,
                       Agda2Lambox.Compile.Function,
                       Agda2Lambox.Compile.Inductive,
                       Agda2Lambox.Compile.Type,
                       Agda2Lambox.Compile.TypeScheme,
                       Agda2Lambox.Compile,
                       LambdaBox.Names,
                       LambdaBox.Term,
                       LambdaBox.Type,
                       LambdaBox.Env,
                       LambdaBox,
                       CoqGen,
                       SExpr,
                       Paths_agda2lambox
  autogen-modules:     Paths_agda2lambox
  build-depends:       base       >= 4.10  && < 4.22,
                       Agda       >= 2.8   && < 2.9,
                       deepseq    >= 1.4.4 && < 1.6,
                       sexpresso  >= 1.2.5 && < 1.3,
                       pretty-show,
                       containers,
                       directory,
                       filepath,
                       text,
                       mtl
  default-language:    Haskell2010
  default-extensions:
    LambdaCase RecordWildCards PatternSynonyms TupleSections
    ViewPatterns PatternGuards
    ScopedTypeVariables
    TypeFamilies TypeOperators TypeApplications
    FunctionalDependencies TypeSynonymInstances ConstraintKinds
    DoAndIfThenElse BlockArguments MultiWayIf
    ImportQualifiedPost
